# team-sync-lib

./: README.md  bump_version.py  pyproject.toml
.github/workflows/: publish.yml
src/: README.md  bump_version.py  pyproject.toml
src/.github/workflows/: publish.yaml
src/src/acme_sync/: __init__.py
tests/: test_import.py
