[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acme_sync"
version = "0.0.3"
description = "Simple Python library published via GAR + GitHub OIDC"
readme = "README.md"
requires-python = ">=3.9"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["acme_sync"]
