[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acme-sync"
version = "0.0.5"    # last published version, next will be bumped automatically
description = "ACME Sync Python Library"
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
